--- a/charts-api/src/test/resources/net/java/html/charts/charts.html
+++ b/charts-api/src/test/resources/net/java/html/charts/charts.html
@@ -31,6 +31,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <canvas id="chartDiv" width="400" height="200">Chart Placeholder</canvas>
+        <canvas id="lineChart" width="400" height="200">Chart Placeholder</canvas>
+        <canvas id="barChart" width="400" height="200">Chart Placeholder</canvas>
     </body>
 </html>
