Implementing the pie-like charts

--- a/charts-api/src/test/resources/net/java/html/charts/charts.html
+++ b/charts-api/src/test/resources/net/java/html/charts/charts.html
@@ -33,5 +33,8 @@
     <body>
         <canvas id="lineChart" width="400" height="200">Chart Placeholder</canvas>
         <canvas id="barChart" width="400" height="200">Chart Placeholder</canvas>
+        <canvas id="pieChart" width="400" height="200">Chart Placeholder</canvas>
+        <canvas id="doughnutChart" width="400" height="200">Chart Placeholder</canvas>
+        <canvas id="polarChart" width="400" height="200">Chart Placeholder</canvas>
     </body>
 </html>
