Including also the polar chart in the sample.

--- a/sample/client/src/main/webapp/pages/index.html
+++ b/sample/client/src/main/webapp/pages/index.html
@@ -41,11 +41,12 @@
     </head>
     <body>
     <center>
-        <button data-bind="click: bar">Bar Graph</button>
-        <button data-bind="click: pie">Pie Graph</button>
-        <button data-bind="click: line">Line Graph</button>
-        <button data-bind="click: doughnut">Doughnut Graph</button>
-        <button data-bind="click: polar">Polar Graph</button>
+        <button data-bind="click: bar">Bar</button>
+        <button data-bind="click: pie">Pie</button>
+        <button data-bind="click: line">Line</button>
+        <button data-bind="click: doughnut">Doughnut</button>
+        <button data-bind="click: radar">Radar</button>
+        <button data-bind="click: polar">Polar</button>
         <canvas id="chart"></canvas>
         <p>
             Click the chart to increase the values. Hold <em>Shift</em>
