Using minified version of TeaVM and exposing radar graph.

--- a/charts-api/src/main/java/net/java/html/charts/package.html
+++ b/charts-api/src/main/java/net/java/html/charts/package.html
@@ -48,11 +48,12 @@
             <a href="http://dukescript.com">DukeScript</a> project.
         </p>
     <center>
-        <button data-bind="click: bar">Bar Chart</button>
-        <button data-bind="click: pie">Pie Chart</button>
-        <button data-bind="click: line">Line Chart</button>
-        <button data-bind="click: doughnut">Doughnut Chart</button>
-        <button data-bind="click: polar">Polar Chart</button>
+        <button data-bind="click: bar">Bar</button>
+        <button data-bind="click: pie">Pie</button>
+        <button data-bind="click: line">Line</button>
+        <button data-bind="click: doughnut">Doughnut</button>
+        <button data-bind="click: radar">Radar</button>
+        <button data-bind="click: polar">Polar</button>
         <canvas id="chart"></canvas>
         <p>
             Click the chart to increase the values. Hold <em>Shift</em>
